<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SimpleCalculator</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>


    <string name="result_name">SimpleCalculator</string>

    <!-- Main.xml Strings -->
    <string name="enter_bill">Enter the total bill amount:</string>
    <string name="select_tip">Select a tip amount</string>
    <string name="button_10">10 Percent</string>
    <string name="button_15">15 Percent</string>
    <string name="button_20">20 Percent</string>
    <string name="error_et">Oops! Please Enter a total bill amount</string>
    <string name="common_tag_tip">TIP</string>
    <string name="common_total_amount">AMOUNT</string>
    <string name="common_tip_percent">TIP_PERCENT</string>
    <string name="common_split_between">SPLIT_BETWEEN</string>
    <string name="common_split_total">SPLIT_TOTAL</string>
    <string name="button_custom_tip">PERCENT</string>
    <string name="split_between">Split Between</string>
    <string-array name="spinner_list">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <!-- Result.xml Strings -->
    <string name="tip_percent">Tip:</string>
    <string name="tip_amount">Your tip is:</string>
    <string name="total_amount">Your new total is:</string>
    <string name="finished_button">Finished</string>
    <string name="result_split_between">Split Between:</string>
    <string name="result_split_total">Split Total:</string>

</resources>
