<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView
        android:id="@+id/text_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/activity_bill_text_size"
        android:text="@string/enter_bill"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/editText1"
        android:gravity="center"
        android:layout_below="@+id/text_prompt"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/activity_button_20"/>

    <TextView
        android:id="@+id/splitBetween"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/split_between"
        android:layout_below="@+id/editText1"
        />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinner1"
        android:layout_below="@id/editText1"
        android:layout_toRightOf="@+id/splitBetween"
        >
    </Spinner>




    <TextView
        android:id="@+id/tip_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/select_tip"
        android:layout_below="@+id/spinner1"
        android:layout_marginBottom="@dimen/activity_tip_space"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/editText2"
        android:gravity="center"
        android:layout_below="@+id/tip_prompt"
        android:layout_alignParentLeft="@+id/button_custom_tip"
         />

    <Button
        android:id="@+id/button_custom_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text = "@string/button_custom_tip"
        android:layout_above="@+id/tip10"
        android:layout_toRightOf="@+id/editText2"
        android:layout_toEndOf="@+id/editText2" />

    <Button
        android:id="@+id/tip10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text = "@string/button_10"
        android:layout_below="@+id/editText2"
        />

    <Button
        android:id="@+id/tip15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text = "@string/button_15"
        android:layout_below="@+id/tip10"/>

    <Button
        android:id="@+id/tip20"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text = "@string/button_20"
        android:layout_below="@+id/tip15"
        android:layout_marginBottom="@dimen/activity_button_20"/>







</RelativeLayout>
